# fsdata-proto

./: .env  .envrc  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.devcontainer/: devcontainer.json
extras/: config-parser.ipynb  fsdata-config.ipynb  fsdata-help.ipynb  fsdata-load.ipynb  fsdata-test.ipynb
src/fsdata/: __init__.py  collection.py  config.py  testing.py  utils.py
tests/: test_fsdata.py
tests/config/: fsdata.ini
tests/data/: sample.parquet
