[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fsdata"
version = "0.0.3"
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
description = "Simple data access layer over fsspec"
urls.homepage = "https://github.com/furechan/fsdata-proto"
authors = [{ name = "Furechan", email = "furechan@xsmail.com" }]
keywords = ["data-access", "pathlib", "fsspec"]
dependencies = ["universal_pathlib", "pyarrow", "pandas"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = ["pytest", "ipykernel", "nbmask"]

[tool.pydev]
allow-publish = true

[tool.hatch.build]
targets.wheel.sources = ["src"]
dev-mode-dirs = ["src"]
only-include = ["src"]
exclude = [".*"]

[tool.pytest.ini_options]
addopts = ["-p no:cacheprovider"]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"*.ipynb" = ["F401", "F811"]
