[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "fsdata"


[project]
name = "fsdata"
version = "0.0.3"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
description = "Simple data access layer over fsspec"
urls.homepage = "https://github.com/furechan/fsdata-proto"
authors = [{ name = "Furechan", email = "furechan@xsmail.com" }]
keywords = ["data-access", "pathlib", "fsspec"]
dependencies = ["universal_pathlib", "pyarrow", "pandas"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[dependency-groups]
dev = [
    "pytest",
    "ipykernel",
    "nbmask",
    "tox",
    "pydev-toy",
    "jupyter>=1.1.1",
    "tomli>=2.2.1",
]

[tool.pydev]
allow-publish = true

[tool.pytest.ini_options]
addopts = ["-p no:cacheprovider"]
testpaths = ["tests"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"*.ipynb" = ["F401", "F811"]
